--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body ng-app='salesAngular'>
 	<div class='container'>
-	<h1>Acme Sales Angular</h1>
+	<img src="http://vignette1.wikia.nocookie.net/looneytunes/images/5/56/Comp_2.jpg/revision/latest?cb=20121102161419" alt="Acme" class="img-respnsive center-block">
 		<ul class='nav nav-tabs'>
 			<li ui-sref-active='active'><a ui-sref='home'>Home</a></li>
 			<li ui-sref-active='active'><a ui-sref='regions'>Regions</a></li>
